# dash-ingest

./: CLAUDE.md  README.md  RELEASE_NOTES.md  pyproject.toml
.github/workflows/: ci.yml  daily.yml  release.yml
dashingest/: __init__.py  connectors.py  ingestor.py  readers.py  ui.py
docs/api/: dashingest.html  index.html  search.js
marketplace/: listing.json  quickstart_notebook.py
tests/: test_connectors.py  test_dashingest.py  test_ingestor_helpers.py  test_readers.py  test_secrets_and_test_query.py
