[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "dash-ingest"
version = "0.1.0"
description = "Easy data ingestion connectors for Databricks — with a built-in notebook UI"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "Apache-2.0" }
authors = [{ name = "Darshan Shah", email = "darshan.innovation@icloud.com" }]
keywords = ["databricks", "ingestion", "etl", "pyspark", "delta"]
dependencies = ["ipywidgets>=8.0"]

[project.optional-dependencies]
dev = ["pytest", "pytest-cov", "hatch", "pdoc", "ruff"]

[project.urls]
Homepage = "https://github.com/darshan-innovation/dash-ingest"
