[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "dash-ingest"
dynamic = ["version"]
description = "ADF-style data ingestion for Databricks — pick a source (Volume, ADLS, S3, Database, REST API), fill a few fields, run"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "Apache-2.0" }
authors = [{ name = "Darshan Shah", email = "darshan.innovation@gmail.com" }]
keywords = ["databricks", "ingestion", "etl", "pyspark", "delta", "adls", "jdbc"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "Intended Audience :: Information Technology",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]
dependencies = ["ipywidgets>=8.0", "dash-uis==0.3.5", "requests>=2.28"]

[project.optional-dependencies]
dev = ["pytest", "pytest-cov", "hatch", "pdoc", "ruff"]

[project.urls]
Homepage = "https://github.com/dash-libs/dash-ingest"

[tool.hatch.version]
path = "dashingest/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["dashingest"]

[tool.pytest.ini_options]
testpaths = ["tests"]
